fix: [attackMatrix] No longer set the modal position to fixed when the viewport is small.
Under a viewport of 1400px, the modal's position is set to absolute
alowing the user to use the scrollbar for navigation.

--- a/app/webroot/css/attack_matrix.css
+++ b/app/webroot/css/attack_matrix.css
@@ -153,11 +153,3 @@ li.tactic.active {
     height: 10px;
     line-height: 10px;
 }
-
-.matrix-div-submit {
-    left: 50%;
-    padding-left: 1px;
-    right: unset;
-    padding-right: 1px;
-    display: none;
-}
